--- a/assets/css/a11yc.css
+++ b/assets/css/a11yc.css
@@ -31,7 +31,8 @@
 	color: #006ab6;
 }
 .a11yc a:active {
-	color: #68baef;
+/* 	color: #68baef; */
+/*	color: #8bc32f;*/
 }
 .a11yc a:hover {
 	text-decoration: none;
@@ -206,7 +207,8 @@ tr.a11yc_flash {
 .a11yc h1 {
 	font-size: 2em;
 	font-weight: normal;
-	border-bottom: 2px solid #68baef;
+/* 	border-bottom: 2px solid #68baef; */
+	border-bottom: 2px solid #8bc32f;
 	margin: .25em 0 .5em;
 }
 .a11yc h1.a11yc_hasctrl {
@@ -220,7 +222,8 @@ tr.a11yc_flash {
 .a11yc h1.a11yc_hasctrl+*+.a11yc_presentation {
 	width: 100%;
 	height: 2px;
-	background-color: #68baef;
+/* 	background-color: #68baef; */
+	background-color: #8bc32f;
 	clear: both;
 	margin-bottom: 1em;
 }
@@ -233,7 +236,8 @@ tr.a11yc_flash {
 }
 .a11yc h2:after {
 	content: '';
-	background-color: #68baef;
+/* 	background-color: #68baef; */
+	background-color: #8bc32f;
 	display: block;
 	position: absolute;
 	left: 0;
@@ -384,7 +388,8 @@ table.a11yc_table_info {
 }
 #a11yc_menu a:hover,
 #a11yc_menu a:focus {
-	color: #68baef;
+/* 	color: #68baef; */
+	color: #8bc32f;
 }
 /* fixed a11yc menu */
 #a11yc_header {
@@ -551,7 +556,7 @@ table.a11yc_table_info {
 	text-align: right;
 	width: 20em;
 }
-#a11yc_back_to_target_page th {
+#a11yc_targetpage_info th {
 	text-align: left;
 	padding-right: 5px;
 	vertical-align: top;
@@ -1391,6 +1396,10 @@ table td.a11yc_result {
 }
 
 /* a11yc_validator */
+#a11yc_post {
+	box-sizing: border-box;
+	min-height: calc( 100vh - 16px - 65px - 1em);
+}
 
 #a11yc_validator_results_info dd {
 	word-break: break-all;
