--- a/assets/css/a11yc.css
+++ b/assets/css/a11yc.css
@@ -72,7 +72,7 @@
 	font-weight: normal;
 	margin-bottom: 2px;
 }
-#a11yc_errors .a11yc_controller p {
+#a11yc_validator_results .a11yc_controller p {
 	margin: 0;
 }
 .a11yc_source {
@@ -615,15 +615,15 @@ table#a11yc_rest {
 	text-align: right;
 	width: 3em;
 }
-#a11yc_errors h1 a {
+#a11yc_validator_results h1 a {
 	padding: .125em 5px .1em;
 }
-#a11yc_errors,
-#a11yc_errors dt,
+#a11yc_validator_results,
+#a11yc_validator_results dt,
 #a11yc_menu_principles {
 	clear: both;
 }
-#a11yc_errors p {
+#a11yc_validator_results p {
 	margin: 1em 0;
 }
 #a11yc_validation_list,
@@ -684,10 +684,10 @@ dl#a11yc_validation_code {
 	margin-left: 0;
 	border-width: 0 1px 1px 1px;
 }
-#a11yc_errors dl dt {
+#a11yc_validator_results dl dt {
 	font-weight: bold;
 }
-#a11yc_errors dd {
+#a11yc_validator_results dd {
 	margin-left: 0;
 }
 .a11yc_validation_error_link {
