--- a/assets/css/a11yc.css
+++ b/assets/css/a11yc.css
@@ -615,7 +615,7 @@ table#a11yc_rest {
 	text-align: right;
 	width: 3em;
 }
-#a11yc_validator_results h1 a {
+#a11yc_validator_results .a11yc_narrow_level a {
 	padding: .125em 5px .1em;
 }
 #a11yc_validator_results,
@@ -1400,6 +1400,28 @@ table td.a11yc_result {
 	box-sizing: border-box;
 	min-height: calc( 100vh - 16px - 65px - 1em);
 }
+#a11yc_post form {
+	background-color: #eee;
+	padding: 30px 20px 20px;
+	margin-bottom: 1em;
+}
+#a11yc_post form h2 {
+	margin-top: 0;
+}
+#a11yc_post #url {
+	width: calc( 100% - 25em );
+	margin-right: 1em;
+}
+#a11yc_post #user_agent {
+	width: 16em;
+}
+.a11yc_submit_group {
+	text-align: right;
+	margin-top: 20px;
+}
+.a11yc_submit_group [type="submit"]{
+	display: inline;
+}
 #a11yc_validation_not_found_error {
 	background-color: rgba(139, 195, 47,.15);
 	margin-top: 1em;
@@ -1435,7 +1457,7 @@ table td.a11yc_result {
 	border-top: 1px #aaa solid;
 	text-align: center;
 	padding: 20px 0 10px;
-	margin: 25px 0 0;
+	margin: 0;
 }
 
 #a11yc_readme_vendor li {
