--- a/assets/css/a11yc.css
+++ b/assets/css/a11yc.css
@@ -1306,6 +1306,7 @@ ul.a11yc_pagenation li {
 #a11yc_docs .a11yc_ul_check h5,
 #a11yc_post .a11yc_ul_check h5 {
 	font-size: 1.1em;
+	margin-top: 0;
 	margin-bottom: .25em;
 }
 
@@ -1400,12 +1401,12 @@ table td.a11yc_result {
 	box-sizing: border-box;
 	min-height: calc( 100vh - 16px - 65px - 1em);
 }
-#a11yc_post form {
+#a11yc_post form.a11yc_validator {
 	background-color: #eee;
-	padding: 30px 20px 20px;
+	padding: 15px 20px 5px;
 	margin-bottom: 1em;
 }
-#a11yc_post form h2 {
+#a11yc_post form.a11yc_validator h2 {
 	margin-top: 0;
 }
 #a11yc_post #url {
@@ -1446,11 +1447,39 @@ table td.a11yc_result {
 	top: .165em;
 	left: .175em;
 }
-
+#a11yc_post .a11yc_narrow_level a {
+	position: relative;
+	display: inline-block;
+	font-size: 2.5em;
+	margin-right: 20px;
+	margin-bottom: 0;
+}
+#a11yc_post .a11yc_narrow_level a .a11yc_errs_lv:after {
+	content: '';
+	display: block;
+	width: 100%;
+	height: 6px;
+	background-color: #cc4030;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+	right: 0;
+}
+#a11yc_post .a11yc_narrow_level .a11yc_errs_cnt {
+	font-size: 1.5em;
+	font-weight: bold;
+}
+#a11yc_post .a11yc_narrow_level a.current {
+	background-color: #cc4030;
+}
+#a11yc_post .a11yc_narrow_level a.current .a11yc_errs_lv:after,
+#a11yc_post .a11yc_narrow_level a:hover .a11yc_errs_lv:after,
+#a11yc_post .a11yc_narrow_level a:focus .a11yc_errs_lv:after {
+	content: none;
+}
 #a11yc_validator_results_info dd {
 	word-break: break-all;
 }
-
 #a11yc_validator_footer {
 	font-size: 90%;
 	font-family: sans-serif;
