--- a/assets/css/a11yc.css
+++ b/assets/css/a11yc.css
@@ -1229,7 +1229,7 @@ ul.a11yc_pagenation li {
 	padding-right: 130px;
 	min-height: 120px;
 }
-#a11yc_center_about .a11yc_logo_author {
+#a11yc_center_about #a11yc_logo_author {
 	position: absolute;
 	top: 20px;
 	right:20px;
