--- a/assets/css/a11yc_live.css
+++ b/assets/css/a11yc_live.css
@@ -1,72 +1,5 @@
 @charset "utf-8";
-/*
- * head
- */
-/*
-head {
-	display: block;
-	border-bottom: 2px solid #ccc;
-	color: #000;
-	background: #fefefe;
-	padding: 5px;
-}
-*/
-head > * {
-	display: block;
-	white-space: pre;
-	font-family: monospace;
-	font-size: 12px;
-}
 
-/* prefix and suffix for head elements */
-head title:before {
-	content: "<title>"; 
-}
-head title:after {
-	content: "</title>"; 
-}
-head script:before {
-	content: "<script>"; 
-}
-head script[src]:before {
-	content: "<script src=\"" attr(src) "\">"; 
-}
-head script[type]:before {
-	content: "<script type=\"" attr(type) "\">"; 
-}
-head script[type][src]:before {
-	content: "<script src=\"" attr(src) "\" type=\"" attr(type) "\">"; 
-}
-head script:after {
-	content: "</script>";
-}
-head style:before {
-	content: "<style>"; 
-}
-
-head style[type]:before {
-	content: "<style type=\"" attr(type) "\">"; 
-}
-head style:after {
-	content: "</style>";
-}
-
-head link:before {
-    content: "<link rel=\"" attr(rel) "\" type=\"" attr(type) "\" href=\"" attr(href) "\" />";
-}
-
-/* for a11yc assets */
-head link[href$="a11yc_live.css"],
-head script[src$="a11yc_live.js"]
-{
-	display: none !important;
-	color: red;
-}
-
-
-/*
- * body
- */
 .a11yc_validation_code_error
 {
 	display: block;
@@ -86,8 +19,7 @@ head script[src$="a11yc_live.js"]
 	line-height: 1.5em;
 	outline: 2px solid rgba( 255,255,255,.75 );
 }
-.a11yc_validation_code_error:after {
-	content: attr(title);
+.a11yc_validation_code_error .a11yc_error_text {
 	display: block;
 	font-weight: normal;
 }
