--- a/assets/css/a11yc_live.css
+++ b/assets/css/a11yc_live.css
@@ -8,7 +8,7 @@
 	right: auto;
 	top: auto;
 	bottom: auto;
-	padding: 2px 5px 1px;
+	padding: 1px 3px 0;
 	background-color: #900;
 	color: #fff;
 	border-radius: 3px;
@@ -17,7 +17,7 @@
 	font-weight: bold;
 	font-family: Arial;
 	line-height: 1.5em;
-	outline: 2px solid rgba( 255,255,255,.75 );
+	border: 2px solid rgba( 255,255,255,.75 );
 }
 .a11yc_validation_code_error .a11yc_error_text {
 	display: block;
@@ -38,6 +38,7 @@
 {
 	display: inline;
 	outline: 2px dashed #900;
+	outline-offset: -2px;
 }
 .a11yc_validation_code_notice + .a11yc_live_error_wrapper
 {
@@ -49,7 +50,7 @@
  */
 .a11yc_live_img_wrapper {
 	position: relative;
-	padding-bottom: 16px;
+/*	padding-bottom: 16px;*/
 }
 .a11yc_live_img_wrapper .a11yc_live_alt {
 	color: #000;
@@ -65,6 +66,7 @@
 }
 
 /* Overlay */
+/* max of z-index: 2147483647 */
 #a11yc_overlay {
 	position: fixed;
 	top: 0;
@@ -73,10 +75,16 @@
 	right: 0;
 	width: 100vw;
 	height: 100vh;
-	z-index: 2147483646;
+	z-index: 2147483640;
 }
 .a11yc_validation_code_error,
 .a11yc_live_img_wrapper .a11yc_live_alt 
+{
+	z-index: 2147483645;
+}
+.a11yc_validation_code_error:hover,
+.a11yc_live_img_wrapper .a11yc_live_alt:hover,
+body :focus
 {
 	z-index: 2147483647;
 }
