--- a/assets/css/a11yc.css
+++ b/assets/css/a11yc.css
@@ -140,8 +140,7 @@
 	text-decoration: underline;
 }
 
-#a11yc_validation_list .a11yc_validation_error_link span:before,
-#a11yc_validation_notices_list .a11yc_validation_error_link span:before,
+.a11yc_validation_list .a11yc_validation_error_link span:before,
 .a11yc_source .a11yc_back_link span:before {
 	color: #006ab6;
 }
@@ -434,34 +433,33 @@ table.a11yc_table_info {
 /* fixed a11yc menu */
 #a11yc_header {
 	position: relative;
+	position: sticky;
+	top: 0;
+	z-index: 2;
 	width: 100%;
 	word-break: break-all;
 	-moz-box-sizing: border-box;
 	-webkit-box-sizing: border-box;
 	box-sizing: border-box;
-}
-.a11yc_fixed_header #a11yc_header {
 	background-color: #fff;
-	position: fixed;
-	left: 0;
-	right: 0;
-	top: 0;
-	margin-bottom: 20px;
-	padding: 26px 8px 0;
-	z-index: 90;
-	max-height: calc( 100vh - 3em);
-	overflow: auto;
 }
 #a11yc_header_inner {
 	max-width: 960px;
 	margin: auto;
 }
-.a11yc_fixed_header > h1 {
+.a11yc_fixed_header > h1,
+.a11yc_fixed_header .a11yc_hide_if_fixedheader {
 	clip: rect(1px 1px 1px 1px);
 	clip: rect(1px,1px,1px,1px);
-	position: absolute;
+	position: absolute !important;
 	left: 0;
 }
+.a11yc_fixed_header #a11yc_header
+{
+	font-size: .8em;
+}
+
+
 
 /* ===  form === */
 /* input */
@@ -674,34 +672,43 @@ table#a11yc_rest {
 #a11yc_validator_results p {
 	margin: 1em 0;
 }
-#a11yc_validation_list,
-#a11yc_validation_notices_list,
-.a11yc_source {
+.a11yc_validation_list,
+.a11yc_source
+{
 	max-height: 200px;
 	max-height: calc(50vh - 9em);
-	min-height: 2em;
 	overflow: auto;
 }
-#a11yc_post #a11yc_validation_list,
-#a11yc_post #a11yc_validation_notices_list,
-#a11yc_post .a11yc_source {
+#a11yc_post .a11yc_validation_list,
+#a11yc_post .a11yc_source
+{
 	max-height: initial;
 }
-#a11yc_validation_list.expand,
+.a11yc_validation_list.expand,
 .a11yc_source.expand {
 	max-height: initial;
 }
-#a11yc_validation_list,
-#a11yc_validation_notices_list {
+.a11yc_validation_list
+{
 	margin: 0;
-	padding: 10px 5px;
 	background-color: #fee;
+	border-top: 1px solid #fff;
+	border-bottom: 1px solid #fff;
 }
+.a11yc_validation_list dt,
+{
+	margin: 10px 5px;
+}
+.a11yc_validation_list dd
+{
+	margin: 0 5px;
+	padding: 5px;
+}
+
 #a11yc_validation_notices_list {
-	margin: 5px 0 0;
-	border: 1px #aaa solid;
 	background-color: #ffffdf;
 }
+/* use?? */
 #a11yc_validation_errors #a11yc_validation_notices_list dt {
 	background-color: #f0f0cb;
 }
@@ -748,7 +755,6 @@ dl#a11yc_validation_code {
 	font-weight: bold;
 }
 #a11yc_validation_errors dt {
-	margin-top: -1px;
 	background-color: #ffdfdf;
 }
 #a11yc_validation_notices dt {
@@ -758,9 +764,8 @@ dl#a11yc_validation_code {
 #a11yc_validation_errors dd,
 #a11yc_validation_notices dd,
 #a11yc_validation_code dd {
-	margin-left: 0;
-	border: none;
-/*	border-width: 0 1px 1px 1px;*/
+	margin: 0;
+	border-width: 0 1px;
 }
 
 #a11yc_validator_results dl dt {
@@ -776,67 +781,67 @@ dl#a11yc_validation_code {
 	bottom: 5px;
 }
 #a11yc_menu_principles {
-	margin: 0;
+	margin: 0 -5px;
 	padding-left: 0;
-}
-#a11yc_menu_principles:after {
-	content: '';
-	display: block;
-	height: 0;
-	clear: both;
+	display: table;
+	table-layout:fixed;
+	border-collapse: separate;
+	border-spacing: 5px;
+	width: calc( 100% + 10px ) ;
 }
 #a11yc_menu_principles li {
-	display: block;
-	float: left;
-	width: calc( 25% - 2px );
-	margin: 0 0 0 1px;
+	display: table-cell;
+	position: relative;
+	padding-bottom: 1px;
 }
-#a11yc_menu_principles li+li {
-	margin-left: 2px;
-	}
+#a11yc_menu_principles li:after {
+	content: '';
+	display: block;
+	position: absolute;
+	width: 100%;
+	height: 5px;
+	left: 0;
+	right: 0;
+	bottom: -5px;
+	background-color: #1a5faa;
+}
+li#a11yc_menuitem_2:after {
+	background-color: #14a523;
+}
+li#a11yc_menuitem_3:after {
+	background-color: #e97108;
+}
+li#a11yc_menuitem_4:after {
+	background-color: #e33437;
+}
+
 #a11yc_menu_principles a {
 	display: block;
-	padding: 10px;
+	padding: 5px 10px 0;
 	text-align: center;
 	font-size: 1.5em;
 	font-weight: bold;
-	border-bottom: 6px solid #1a5faa;
-	color: #1a5faa;
+	text-decoration: none;
+	color: #000;
 }
 #a11yc_menu_principles a:hover,
 #a11yc_menu_principles a:focus {
 	background-color: #deebf5;
 	border-color: #0e4986;
 }
-#a11yc_menuitem_2 a {
-	color: #14a523;
-	border-color: #14a523;
-}
 #a11yc_menuitem_2 a:hover,
 #a11yc_menuitem_2 a:focus {
 	background-color: #def5e3;
-	border-color: #1b852b;
-}
-#a11yc_menuitem_3 a {
-	color: #e97108;
-	border-color: #e97108;
 }
 #a11yc_menuitem_3 a:hover,
 #a11yc_menuitem_3 a:focus {
 	background-color: #fff1e3;
-	border-color: #ed7231;
-}
-#a11yc_menuitem_4 a {
-	color: #e33437;
-	border-color: #e33437;
 }
 #a11yc_menuitem_4 a:hover,
 #a11yc_menuitem_4 a:focus {
 	background-color: #ffebef;
-	border-color: #e81b21;
 }
 h2.a11yc_header_principle {
-	position: relative;
 	margin: 40px 0 .5em;
 	padding: 7px 9em 4px 5px;
 	font-size: 1.5em;
